# Utility

./: .gitignore  AtomicSeqNo.cpp  AtomicSeqNo.h  BracesStructure.cpp  BracesStructure.h  CMakeLists.txt  CharString.cpp  CharString.h  CommonDebug.h  CommonDef.h  CommonException.cpp  CommonException.h  ConsoleUtil.cpp  ConsoleUtil.h  DaemonUtil.cpp  DaemonUtil.h  DateTime.cpp  DateTime.h  ExecuteResult.cpp  ExecuteResult.h  FileCache.cpp  FileCache.h  FileUtil.cpp  FileUtil.h  HashKeyHelper.cpp  HashKeyHelper.h  IntervalTrigger.cpp  IntervalTrigger.h  LinkedQueue.cpp  LinkedQueue.h  LocalString.h  MMapSeqGenerator.cpp  MMapSeqGenerator.h  MacroRecipe.h  MailNotifier.cpp  MailNotifier.h  MathUtil.cpp  MathUtil.h  MemoryAllocator.cpp  MemoryAllocator.h  (+32 more)
Collect/: AliveCache.h  BlockingQueue.h  CharArrayPool.cpp  CharArrayPool.h  DualMapping.h  LockMappingData.h  ObsoletedDataManager.h  SubscribePool.h
INI/: IniComment.cpp  IniComment.h  IniElement.cpp  IniElement.h  IniFile.cpp  IniFile.h  IniKeyValue.cpp  IniKeyValue.h  IniSection.cpp  IniSection.h  IniSettings.cpp  IniSettings.h
Log/: AsyncFileLogger.cpp  AsyncFileLogger.h  AsyncRollFileLogger.cpp  AsyncRollFileLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  DeferedLogger.cpp  DeferedLogger.h  FileBufferLogger.cpp  FileBufferLogger.h  FileLogger.cpp  FileLogger.h  GeneralLogger.cpp  GeneralLogger.h  ILogData.cpp  ILogData.h  ILogger.cpp  ILogger.h  LogAgent.cpp  LogAgent.h  LogMessage.cpp  LogMessage.h  LogSystem.cpp  LogSystem.h  LoggerWrapper.cpp  LoggerWrapper.h  RollFileLogger.cpp  RollFileLogger.h
MT/: BitCountdownEvent.cpp  BitCountdownEvent.h  CountdownEvent.cpp  CountdownEvent.h  CurrentThread.cpp  CurrentThread.h  DataDispatcher.cpp  DataDispatcher.h  ManualResetEvent.cpp  ManualResetEvent.h  POSIXManualResetEvent.cpp  POSIXManualResetEvent.h  SpinLock.cpp  SpinLock.h  ThreadPool.cpp  ThreadPool.h  ThreadSender.h
Network/: AsyncSocketChannel.cpp  AsyncSocketChannel.h  SocketBase.cpp  SocketBase.h  SocketChannel.cpp  SocketChannel.h  SocketClient.cpp  SocketClient.h  SocketException.cpp  SocketException.h  SocketPorting.h  SocketServer.cpp  SocketServer.h  SocketServerListener.cpp  SocketServerListener.h  SocketUDPClient.cpp  SocketUDPClient.h
Performance/: PerformanceUtil.cpp  PerformanceUtil.h  StopWatch.cpp  StopWatch.h  StopWatchChrono.cpp  StopWatchChrono.h  StopWatchMulti.cpp  StopWatchMulti.h
Persistence/: AbstractFilePersistence.cpp  AbstractFilePersistence.h  ConsolePersistence.cpp  ConsolePersistence.h  FilePersistence.cpp  FilePersistence.h  MemMapFilePersistence.cpp  MemMapFilePersistence.h  PersistenceLineReader.cpp  PersistenceLineReader.h  RollFilePersistence.cpp  RollFilePersistence.h
SharedMemory/: SharedMemoryTool.cpp  SharedMemoryTool.h
